--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_rewrite.c>
-  RewriteEngine on
+  RewriteEngine On
   RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteCond %{REQUEST_FILENAME}.html !-f
-  RewriteRule ^(.*)$ $1.html
-  </IfModule>
+  RewriteCond %{REQUEST_FILENAME}.html -f
+  RewriteRule ^([^\.]+)$ $1.html [NC,L]
+</IfModule>
